tests/system/snapshots/a_yinyue_thread.snap
---
source: tests/system/support/mod.rs
expression: text
---
── user
[User → Ling]: Look at the table.
── user
[Ling used Look → {"table.name":"Harbor Table","player.name":"Alex","last_roll.value":4}]
── user
[Ling]: Harbor Table.
── user
what is the player called?
