tests/system/snapshots/d_ling_thread_after_compaction.snap
---
source: tests/system/support/mod.rs
expression: text
---
── system
[Context compacted — 6 messages summarized]

SUMMARY: Alex sent filler; Ling said OK.
── user
Short one.
── assistant
Fine.
── system
Memory capture: before finishing this turn, recognize anything worth remembering and write it at the right tier per the memory protocol (core/semantic = search-first; episodic = incidental); anchor relative time to absolute dates ("last month" → "2026-06"). Nothing worth keeping? Skip silently.
── user
Still there?
