tests/system/snapshots/withheld_call_result.snap
---
source: tests/system/support/mod.rs
expression: text
---
tool_not_allowed: tool=mcp__memory__memory_add reason=withheld: not available on this turn
